--- a/tasks.json
+++ b/tasks.json
@@ -10,5 +10,17 @@
     "notes": "",
     "subtasks": [],
     "tags": []
+  },
+  {
+    "id": 2,
+    "description": "call tomorrow with freind",
+    "priority": "medium",
+    "created_at": "2025-01-11T17:59:12.226403",
+    "completed": false,
+    "due_date": null,
+    "category": "work",
+    "notes": "",
+    "subtasks": [],
+    "tags": []
   }
 ]
